[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "game_engine"
path = "game_engine.rs"    # <-- dùng file ./src/game_engine.rs
crate-type = ["cdylib"]    # cần cho wasm + wasm-bindgen

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window","Document","HtmlCanvasElement","CanvasRenderingContext2d"] }
console_error_panic_hook = "0.1.7"
