[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"
authors = ["deeplauncher"]

[lib]
name = "game_engine"
path = "game_engine.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
# keep web-sys features minimal and valid for canvas usage
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d"
] }

console_error_panic_hook = "0.1.7"
